--- a/Poblacion.html
+++ b/Poblacion.html
@@ -9,16 +9,28 @@
 </head>
 <!-- Inicio header-->
 <header>
-    <nav>
-        <img src="Fotos italia/Bandera Header.jpg" alt="">
-        <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="lugares emblematicos.html">Lugares Emblematicos</a></li>
-                <li><a href="grandesPersonajes.html">Grandes Personajes</a></li>
-                <li><a href="Geografia.html">Geografia</a></li>
-                <li><a href="Poblacion.html">Poblacion</a></li>
-        </ul>
-    </nav>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="Fotos italia/Bandera Header.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            <div>
+                <a href="index.html">Inicio</a></li>
+            </div>
+            <div>
+                <a href="lugares emblematicos.html">Lugares Emblematicos</a></li>
+            </div>
+            <div>
+                <a href="grandesPersonajes.html">Grandes Personajes</a></li>
+            </div>
+            <div>
+                <a href="Geografia.html">Geografia</a></li>
+            </div>
+            <div>
+                <a href="Poblacion.html">Poblacion</a></li>
+            </div>
+          </a>
+      </nav>
 </header>
 <!-- fin header -->
 
