segunda pre entrega

--- a/Geografia.html
+++ b/Geografia.html
@@ -4,32 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+</html>
     <link rel="stylesheet" href="style.css">
     <title>Geografia</title>
 </head>
 <!-- Inicio header-->
 <header>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="Fotos italia/Bandera Header.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            <div>
-                <a href="index.html">Inicio</a></li>
-            </div>
-            <div>
-                <a href="lugares emblematicos.html">Lugares Emblematicos</a></li>
-            </div>
-            <div>
-                <a href="grandesPersonajes.html">Grandes Personajes</a></li>
-            </div>
-            <div>
-                <a href="Geografia.html">Geografia</a></li>
-            </div>
-            <div>
-                <a href="Poblacion.html">Poblacion</a></li>
-            </div>
-          </a>
+         <img class="Foto-header"  src="Fotos italia/Bandera Header.jpg" alt="bandera-italia">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html"> Inicio</a>
+                  </li>   
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="lugares emblematicos.html">Lugares emblematicos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="grandesPersonajes.html">Grandes personajes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Geografia.html">Geografia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Poblacion.html">Poblacion</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
 </header>
 <!-- fin header -->
